// NOTE TO DEV:
// GENERATE WITH: protoc --go_out=. ./proto/geocoder.proto --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative 
syntax = "proto3";

option go_package = "geocoder/proto/geocoder.proto";
package geocoder;

// imports //

// service Geocoder - define 
service Geocoder {

  // IO - Client-side streaming RPC
  rpc InsertorReplaceAddressData(stream Address) returns (IOResponse) {} //
  
  // Geocoding
  //
  // Forward Geocoding :: Address -> Point //
  // Reverse Geocoding :: Point -> Address //
  rpc Geocode(GeocodeRequest) returns (GeocodeResponse) {}
  
}

// enum(s)

// Boro defines...
enum Boro {
  UNDEFINED = 0;
  MANHATTAN = 1;
  BRONX = 2;
  BROOKLYN = 3;
  QUEENS = 4;
  STATEN_ISLAND = 5;
  NASSAU = 6;
  WESTCHESTER = 7;
  NEW_JERSEY = 8;
}

// Method defines...
enum Method {
  FWD_FUZZY = 0;
  REV_NEAREST = 1; 
}


// messages - primitive

// Point represents latitude-longitude pairs 
// Latitudes in the range +/- 90 degrees and longitude in the range +/- 180 degrees.
message Point {
  float latitude = 1;
  float longitude = 2;
}

// Address are
// Reference: https://data.cityofnewyork.us/api/views/g6pj-hd8k/files/375ad68c-4cea-45ff-aa9c-8307ae3ed7bb?download=true&filename=AddressPoint.pdf
message AddressData {
  string house_num = 1; // Stores the address number. The field supports hyphenated and range based addresses (e.g. 457-459 7th Ave.)
  string full_street_name = 2;
  Boro borocode = 3; 
  string zipcode = 4;
}

message Address {
  Point location = 1; //
  AddressData data = 2; //
  string id = 3;
}

// IO
message IOResponse {
  bool success = 1;
  int32 total_objects_written = 2;
}

// Geocoding
message ScoredAddress {
  Address address = 1;
  float normed_confidence = 2;
  string full_street_address = 4;
}

// GeocodeRequest
message GeocodeRequest {
  oneof query {
    string address_query = 1; //
    Point point_query = 2; //
  }
  uint32 max_results = 3;
  Method method = 4;
}

// GeocodeResponse
message GeocodeResponse {
  repeated ScoredAddress result = 1;
  uint32 num_results = 2;
}
